FIXED Jenkins Build Failure for wms-impl module tests